--- a/views/index.hbs
+++ b/views/index.hbs
@@ -4,7 +4,7 @@
 <head>
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>{{title}}</title>
+    <title>OOXX-{{pageId}}</title>
     <!--Import materialize.css-->
     <link type="text/css" rel="stylesheet" href="/css/materialize.min.css" media="screen,projection" />
     <link type="text/css" rel="stylesheet" href="/css/style.css" media="screen,projection" />
