--- a/cloud/views/test.ejs
+++ b/cloud/views/test.ejs
@@ -9,6 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 </head>
 <body>
-	{{{markup}}}
+	<h1><%= markup %></h1>
 </body>
 </html>
