--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-@charset 'utf-8'
+@charset 'utf-8';
 /* css reset*/
 html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address,cite,code,del,dfn,em,img,ins,kbd,q,samp,small,strong,sub,sup,var,b,i,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;outline:0;font-size:100%;vertical-align:baseline;background:transparent}body{line-height:1}:focus{outline:1}article,aside,canvas,details,figcaption,figure,footer,header,hgroup,menu,nav,section,summary{display:block}nav ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:"";content:none}a{margin:0;padding:0;border:0;font-size:100%;vertical-align:baseline;background:transparent}ins{background-color:#ff9;color:#000;text-decoration:none}mark{background-color:#ff9;color:#000;font-style:italic;font-weight:700}del{text-decoration:line-through}abbr[title],dfn[title]{border-bottom:1px dotted #000;cursor:help}table{border-collapse:collapse;border-spacing:0}hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0}input,select{vertical-align:middle}
 .clearfloat:before,.clearfloat:after {content:"";display:table;}
@@ -13,12 +13,17 @@ html,body,div,span,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,abbr,address
 body { background:#F2F2F2; text-align: center;}
 
 #content { width: 100%; display: flex; justify-content:space-around;}
-#content > ul { flex: 1; margin:0 5px; list-style:none; }
-#content > ul > li { cursor: pointer; margin-top:20px; padding:10px;background:#fff;border-radius: 3px; box-shadow: 0 1px 2px rgba(0,0,0,0.07); }
+#content > ul { flex: 1; margin:0 5px; }
+#content > ul > li { cursor: pointer; margin-bottom:20px; padding:10px;background:#fff;border-radius: 3px; box-shadow: 0 1px 2px rgba(0,0,0,0.07); }
 #content > ul > li > p {width: 100%; max-height:40px; overflow: hidden; line-height: 20px;-webkit-text-overflow:ellipsis; white-space:normal; word-break: break-all}
 #content > ul > li > img { width: 100%;}
 
-.pagination li { width: auto; line-height: 30px;}
+.pagination {text-align: center; padding: 20px;}
+.pagination li { display: inline-block; width: auto; line-height: 30px; list-style:none;}
+.pagination li {font-size: 1.2rem; height: 30px;margin: 0 10px;border-radius: 2px;text-align: center}
+.pagination li a {color: #444; text-decoration: none;}
+.pagination li.active a {color: #fff}
+.pagination li.active {background-color: #ee6e73}
 
 #popWindow { display:none; z-index:99; position:fixed; top:0; left:0; width: 100%; height: 100%;overflow:auto;background:rgba(0, 0, 0, .3); }
 #imgArea {position:relative; width: 100%; height:100%; margin:0 auto; -webkit-animation-duration: .3s;
@@ -30,6 +35,42 @@ body { background:#F2F2F2; text-align: center;}
 #contextmenu .menu-item { height: 20px; margin:5px 0; line-height: 20px; text-align: center; background:#fff; color:#f26013; font-weight: 700; cursor:pointer; border-radius: 3px;}
 #contextmenu .menu-item:hover { background:#f26013; color:#fff;}
 
-@media (max-width: 600px) {
+.animated {
+  -webkit-animation-duration: 1s;
+          animation-duration: 1s;
+  -webkit-animation-fill-mode: both;
+          animation-fill-mode: both;
+}
+
+@-webkit-keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes zoomIn {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.3, .3, .3);
+            transform: scale3d(.3, .3, .3);
+  }
+
+  50% {
+    opacity: 1;
+  }
+}
+
+.zoomIn {
+  -webkit-animation-name: zoomIn;
+          animation-name: zoomIn;
+}
+
+@media (max-width: 800px) {
 	#content { flex-direction: column;}
 }
